--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  toast:
+  firebase:
+  # firebase_db_web_unofficial:
+  async_builder:
+  firebase_database:
+
 
 dev_dependencies:
   flutter_test:
