--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  toast:
-  firebase:
+
+  firebase_core: ^1.17.0
   flutter_svg:
   # firebase_db_web_unofficial:
-  async_builder:
-  firebase_database:
-  fl_chart:
+  firebase_database: ^7.2.2
+
 
 
 dev_dependencies:
