--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
 
   firebase_core: ^1.17.0
   flutter_svg:
-  # firebase_db_web_unofficial:
   firebase_database: ^7.2.2
   fl_chart: ^0.51.0
+  cloud_firestore: ^3.1.17
 
 
 
