--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   firebase_core: ^1.17.0
-  flutter_svg:
-  firebase_database: ^7.2.2
+  flutter_svg: 
+  firebase_database: ^9.0.15
   fl_chart: ^0.51.0
   cloud_firestore: ^3.1.17
+  provider: ^6.0.3
 
 
 
@@ -52,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
