--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0-69.2.beta <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,12 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  firebase_core: ^1.17.0
+  firebase_core: ^2.4.0
   flutter_svg: 
-  firebase_database: ^9.0.15
-  fl_chart: ^0.51.0
-  cloud_firestore: ^3.1.17
+  firebase_database: ^10.0.7
+  fl_chart: ^0.55.2
   provider: ^6.0.3
+  dartz: ^0.10.1
+  cloud_firestore: ^4.0.4
+  internet_connection_checker: ^1.0.0+1
+  equatable: ^2.0.5
+
 
 
 
@@ -54,6 +58,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
+  mockito: ^5.3.2
+  build_runner: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
