Intergrated Google maps on maps screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cloud_firestore: ^4.0.4
   internet_connection_checker: ^1.0.0+1
   equatable: ^2.0.5
+  google_maps_flutter:
+  google_maps_flutter_web:
 
 
 
