--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
   provider: ^6.0.3
   dartz: ^0.10.1
   cloud_firestore: ^4.0.4
-  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker_plus: ^1.0.1
   equatable: ^2.0.5
-  google_maps_flutter:
   google_maps_flutter_web:
+  google_maps_flutter:
 
 
 
