--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   internet_connection_checker_plus: ^1.0.1
   equatable: ^2.0.5
   google_maps_flutter_web:
-  google_maps_flutter:
+  firebase_auth: ^4.4.2
+  google_maps_flutter: ^2.2.6
 
 
 
