--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   fluentui_system_icons: ^1.1.225
   fpdart: ^1.1.0
   gap: ^3.0.1
+  flutter_riverpod: ^2.4.9
+  go_router: ^13.1.0
 
 
 
